--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "node-sqlite-app",
+  "name": "client-management-system",
   "version": "1.0.0",
+  "description": "Sistema di gestione ore clienti",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev":"node --watch server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
-  }
+    "sqlite3": "^5.1.6",
+    "body-parser": "^1.20.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "nodejs",
+    "express",
+    "sqlite",
+    "client-management"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
