--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dati_db": "node routes/inserimentoClienti.js",
+    "dev": "nodemon server.js",
+    "dev_with_db": "node routes/inserimentoClienti.js && nodemon server.js",
+    "start_with_db": "node routes/inserimentoClienti.js && node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
