--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "sqlite",
     "client-management"
   ],
-  "author": "Your Name",
+  "author": "Nico Maker <nicola.marano02@gmail.com>",
   "license": "MIT"
 }
